--- a/css/style.css
+++ b/css/style.css
@@ -28,9 +28,8 @@ body{
     margin-right: 5%;
 }
 
-.heading{
-    text-align: left;
-    margin-left: 20px;
+.container .heading{
+    text-align: center;
 }
 
 .toggle {
@@ -117,7 +116,7 @@ body{
     color: red;
 }
 
-/* dashboard ko code yeta bata suru */
+/* nav-bar ko code yeta bata */
 .nav-header{
     display: flex;
 }
@@ -146,6 +145,21 @@ body{
     padding: 5px;
     border-radius: 15px;
     cursor: pointer;
+}
+
+/* dashboard ko code yeta bata suru */
+.heading h1{
+    text-align: left;
+    margin-left: 20px;
+}
+
+.heading a{
+    text-decoration: none;
+    color: black;
+}
+
+.heading a:hover{
+    text-decoration: underline;
 }
 
 .blocks{
@@ -227,6 +241,9 @@ body{
 .assignment-container .right{
     overflow-x: hidden;
     overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .assignment-container .left{
@@ -238,13 +255,24 @@ body{
     flex: 60%;
 }
 
+.left .buttons,
+.right .buttons{
+    background-color: #9e5b5b;
+    display: flex;
+    justify-content: flex-end;
+    position: sticky;
+    bottom: 0;
+    padding: 10px;
+}
+
 .left-titles,
 .right-titles{
     display: flex;
     flex-direction: column;
 }
 
-.left-titles{
+.left-titles,
+.right-titles{
     gap: 20px;
 }
 
@@ -255,16 +283,28 @@ body{
     padding:20px;
 }
 
-.right-titles .question{
-    padding:20px;
+.left-titles .category-name:hover{
+    background-color: #ccc;
 }
 
-.left .buttons,
-.right .buttons{
-    background-color: red;
+.right-titles .assignment-title{
+    box-shadow: 0 0 20px 0 rgb(0, 0, 0, 0.25);
+    display: inline;
+}
+
+.assignment-title .title-name{
+    border-bottom: 1px solid black;
+    cursor: pointer;
+    padding:20px;
     display: flex;
-    justify-content: flex-end;
-    position: sticky;
-    bottom: 0;
+    justify-content: space-between;
+}
+
+.assignment-title .question{
+    display: none;
     padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    text-align: justify;
+    column-gap: 10px;
 }
