--- a/css/style.css
+++ b/css/style.css
@@ -287,6 +287,10 @@ body{
     background-color: #ccc;
 }
 
+.category-name.selected-category{
+    background-color: #ccc;
+}
+
 .right-titles .assignment-title{
     box-shadow: 0 0 20px 0 rgb(0, 0, 0, 0.25);
     display: inline;
@@ -301,7 +305,6 @@ body{
 }
 
 .assignment-title .question{
-    display: none;
     padding: 10px;
     display: flex;
     justify-content: space-between;
