--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ body{
 /* dashboard ko code yeta bata suru */
 .heading h1{
     text-align: left;
-    margin-left: 20px;
+    margin: 10px 20px;
 }
 
 .heading a{
@@ -228,6 +228,12 @@ body{
 }
 
 /* assignment-page code start */
+
+.course-title{
+    font-size: 150%;
+    text-align: center;
+    padding-bottom: 10px;
+}
 
 .assignment-container {
     display: flex;
