--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body{
 }
 
 .background-color{
-    background-color: #047a9c;
+    background-color: #014866;
     min-height: 100vh;
 }
 .login-wrapper{
@@ -28,8 +28,9 @@ body{
 .login-logo img{
     padding-top: 2%;
     margin-bottom: 40%;
-    height: 78.6px;
-    width: 234.8px;
+    height: 200px;
+    width: 200px;
+    cursor: pointer;
 }
 
 .logo img{
@@ -128,22 +129,19 @@ body{
     margin-bottom: 2%;
 }
 
-.form-button input{
+.form-button input[type="submit"]{
     padding: 10px 30%;
     max-width: 100%;
     font-size:medium;
     border-radius: 4px;
     border: none;
-}
-
-.form-button input[type="submit"]{
     background: #ffb81c ;
+    cursor: pointer;
 }
 
 
 .form-button input[type="submit"]:hover{
     background: rgb(255,154,25) ;
-    cursor: pointer;
 }
 
 .forgot-password{
@@ -162,7 +160,7 @@ body{
 /* nav-bar ko code yeta bata */
 .nav-header{
     display: flex;
-    background-color: #047a9c;
+    background-color: #014866;
 }
 
 .nav-welcome{
@@ -176,6 +174,7 @@ body{
 .nav-welcome p{
     font-size: 1rem;
     padding-right: 10px;
+    color: #efefef;
 }
 
 .nav-button{
@@ -186,9 +185,16 @@ body{
 }
 
 .nav-button button{
-    padding: 5px;
-    border-radius: 15px;
+    padding: 5px 15px;
+    background: #ffb81c ;
     cursor: pointer;
+    border: none;
+    border-radius: 4px;
+    font-size: medium;
+}
+
+.nav-button button:hover{
+    background: rgb(255,154,25) ;
 }
 
 /* dashboard ko code yeta bata suru */
@@ -307,7 +313,7 @@ body{
 
 .left .buttons,
 .right .buttons{
-    background-color: #9e5b5b;
+    background-color: #014866;
     display: flex;
     justify-content: flex-end;
     position: sticky;
