--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,20 @@
 body{
-    margin:0%;
-    padding:0%;
+    margin:0;
+    padding:0;
     height: 100%;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
 }
 
 .background-color{
-    background-color: #014866;
+    background: linear-gradient(to right, #004d73, #047a9c);;
     min-height: 100vh;
 }
 .login-wrapper{
     display: flex;
     width: 100%;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .login-logo {
@@ -51,10 +51,14 @@ body{
     display: flex;
     flex-direction: column;
     background-color: #efefef;
+    border-radius: 10px;
 }
 
 .container .heading{
     text-align: center;
+    margin-bottom: 20px;
+    font-size: 24px;
+    font-weight: bold; 
 }
 
 .toggle {
@@ -67,7 +71,8 @@ body{
     border-radius: 30px;
     display: flex;
     justify-content: space-between;
-    padding: 20px 0;
+    padding: 5px 0;
+    margin-bottom: 20px;
 }
   
 .toggle input[type=radio] {
@@ -80,6 +85,7 @@ body{
     z-index: 2;
     position: relative;
     cursor: pointer;
+    padding: 10px;
 }
 
 .slider {
@@ -105,6 +111,8 @@ body{
 .input-control label[for=password]{  
     display: block;
     margin-top: 20px;
+    margin-bottom: 5px;
+    font-size: 16px;
 }
 
 .input-control input{
@@ -114,7 +122,7 @@ body{
     padding: 16px 20px;
     border-width: 0 0 2px 0;
     transition: 0.25s ease;
-    background-color: #efefef;
+    background-color: #fff;
     font-size: 16px;
 }
 
@@ -129,6 +137,7 @@ body{
     justify-content: center;
     align-items: center;
     margin-bottom: 2%;
+    margin: 20px 0;
 }
 
 .form-button input[type="submit"]{
@@ -146,10 +155,6 @@ body{
     background: rgb(255,154,25) ;
 }
 
-.forgot-password{
-    text-align: center;
-}
-
 .terms{
     text-align: center;
 }
@@ -165,9 +170,17 @@ body{
     background-color: #014866;
 }
 
+.nav-time {
+    color: #efefef;
+    margin-left: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .nav-welcome{
     margin-left: auto;
-    padding-right: auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -291,7 +304,7 @@ body{
     display: flex;
     justify-content: space-between;
     padding: 0 20px;
-    height: 60vh;
+    height: 65vh;
     column-gap: 20px;
 }
 
